@@ -1,4 +1,4 @@
-cfa.removeIrrelevantForErrorLocations = true
+cfa.removeIrrelevantForSpecification = true
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.octagon.OctagonCPA, cpa.conditions.global.GlobalConditionsCPA
 
