@@ -5,7 +5,7 @@
 # ------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = true
+cfa.removeIrrelevantSpecification = true
 
 analysis.useAssumptionCollector=true
 analysis.useAdjustableConditions=true
