@@ -5,7 +5,7 @@
 # ----------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = true
+cfa.removeIrrelevantForSpecification = true
 
 analysis.useCBMC = true
 counterexample.continueAfterInfeasibleError = true
