@@ -1,5 +1,7 @@
 Changes since CPAchecker 1.1
 ----------------------------
+* r5953: The option "cpa.removeIrrelevantForErrorLocations" was renamed to
+  "cfa.removeIrrelevantForSpecification", as this name is more appropriate.
 * r5060: A time limit of 15 minutes is now enabled by default in most configurations.
   If the analysis is not yet finished, CPAchecker will stop after this time and report UNKNOWN.
   The time limit can be controlled with the "cpa.conditions.global.time.wall" option
